--- a/facturascripts.ini
+++ b/facturascripts.ini
@@ -1,5 +1,4 @@
-name = 'NUMERACION'
-version = 0.1
-min_version = 2017.915
 description = 'Permite cambiar numeracion facturascripts'
-
+min_version = 2017.915
+name = 'numeracion'
+version = 0.1
