--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-Añade un prefijo para la numeración continua, permite agregar frefijos a numeracion continua de facturascripts para facturas 
-remisiones pedidos de compa o venta.
+Añade un prefijo para la numeración continua, permite agregar frefijos a numeracion continua de facturascripts para facturas, 
+remisiones, pedidos de compa o venta.
